# custom-comfy-model-manager

./: .env.example  .gitignore  README.md  bootstrapper.py  phase2-spec.md  pyproject.toml  start.bat  test_handshake.py
app/: __init__.py  config.py  database.py  dependencies.py  downloader_app.py  main.py  websocket.py
app/routers/: agent_debug.py  agent_tools.py  ai_lookup.py  bundles.py  dedupe.py  downloader.py  index.py  queue.py  remote.py  remote_assets.py  sources.py
app/schemas/: remote_task.py
app/services/: agent_tools.py  agent_trace.py  ai_lookup_service.py  ai_lookup_worker.py  ai_tool_agent.py  bundle_service.py  civitai_api.py  dedupe.py  differ.py  downloader.py  hasher.py  indexer.py  queue.py  remote.py  safetensors.py  source_manager.py  url_utils.py  worker.py
app/static/css/: style.css
app/static/js/: ai_review.js  app.js  bundles.js  dedupe.js  downloader.js  remote.js  sync.js
app/templates/: ai_review.html  bundles.html  dedupe.html  downloader.html  index.html  remote.html  sync.html
app/utils/: streaming.py
docs/: phase1-spec.md  tech-stack.md
