[project]
name = "comfy-model-manager"
version = "0.1.0"
description = "ComfyUI Model Library Manager - Sync & dedupe models between Local and Lake storage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.3",
    "blake3>=0.4.1",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "aiofiles>=23.2.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
